--- a/index.html
+++ b/index.html
@@ -5,11 +5,95 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style.css">
-    <title>Document</title>
+    <title>Responsive Layout</title>
 </head>
 <body>
-   <header></header>
-   <main></main>
-   <footer></footer>
+    <header class="header-blu">
+        <div class="container">
+            <div class="header-flex">
+                <div class="left-logo"></div>
+                <div class="right-menu">
+                    <div class="hamburger"></div>
+                    <div class="extended-menu"></div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-double">
+                        <div class="content">
+                            <div class="content-flex">
+                                <div class="left-content"></div>
+                                <div class="right-content"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-30"></div>
+                    <div class="col-30"></div>
+                    <div class="col-30"></div>
+                    <div class="col-30"></div>
+                </div>
+            </div>
+        </section>
+        <section id="planning">
+            <div class="container">
+                <div class="row">
+                    <div class="col-50"></div>
+                    <div class="col-50"></div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-100"></div>
+                    <div class="col-100"></div>
+                    <div class="col-100"></div>
+                    <div class="col-100"></div>
+                </div>
+            </div>
+        </section>
+        <section id="benefits">
+            <div class="container">
+                <div class="row">
+                    <div class="col-30">
+                        <div class="content"></div>
+                    </div>
+                    <div class="col-30"></div>
+                    <div class="col-30"></div>
+                    <div class="col-30"></div>
+                    <div class="col-30"></div>
+                    <div class="col-30"></div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-75"></div>
+                    <div class="col-25"></div>
+                </div>
+            </div>
+        </section>
+        <section id="started">
+            <div class="container">
+                <div class="row">
+                    <div class="col-60"></div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <section id="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-55"></div>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
