--- a/index.html
+++ b/index.html
@@ -5,16 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Responsive Layout</title>
 </head>
 <body>
     <header class="header-blu">
         <div class="container">
             <div class="header-flex">
-                <div class="left-logo"></div>
+                <div class="left-logo">
+                    <div class="content-header">
+                        <img src="./img/logo.png" alt="Logo">
+                    </div>
+                </div>
                 <div class="right-menu">
-                    <div class="hamburger"></div>
-                    <div class="extended-menu"></div>
+                    <div class="hamburger">
+                        <div class="content-header">
+                            <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
+                        </div>
+                    </div>
+                    <div class="extended-menu">
+                        <div class="content-header">
+                            <a href="#">Planning</a>
+                            <a href="#">Testimonials</a>
+                            <a href="#">Features</a>
+                            <a href="#">About Us</a>
+                            <a id="border-radius" href="#">Get Started</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
