[FEAT][STYLE]Add content to the section main-1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Responsive Layout</title>
 </head>
@@ -43,15 +46,59 @@
                     <div class="col-double">
                         <div class="content">
                             <div class="content-flex">
-                                <div class="left-content"></div>
-                                <div class="right-content"></div>
+                                <div class="left-content">
+                                    <h2>Get a demo application</h2>
+                                    <p>
+                                        Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Ratione <br> nobis, architecto ad dolore quod, <br> facere totam quas recusandae <br> blanditiis.
+                                    </p>
+                                    <div id="button">
+                                        <i class="fa-brands fa-apple" style="color: #ffffff;"></i>
+                                        <span>App Store</span> 
+                                    </div>
+                                </div>
+                                <div class="right-content">
+                                    <img id="img" src="./img/phone.png" alt="">
+                                </div>
                             </div>
+                        </div>    
+                    </div>
+                    <div class="col-30">
+                        <div class="content-col">
+                            <i class="fa-solid fa-file-code" style="color: #0084fd;"></i>
+                            <h2 class="main">Clean Code</h2>
+                            <p class="main">
+                                Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Ratione nobis, architecto ad <br> dolore quod, facere totam quas recusandae <br> blanditiis.
+                            </p>
                         </div>
                     </div>
-                    <div class="col-30"></div>
-                    <div class="col-30"></div>
-                    <div class="col-30"></div>
-                    <div class="col-30"></div>
+                    <div class="col-30">
+                        <div class="content-col">
+                            <i class="fa-solid fa-compass-drafting" style="color: #0084fd;"></i>
+                            <h2 class="main">Web Design</h2>
+                            <p class="main">
+                                Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Ratione nobis, architecto ad <br> dolore quod, facere totam quas recusandae <br> blanditiis.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-30">
+                        <div class="content-col">
+                            <i class="fa-solid fa-laptop-code" style="color: #0084fd;"></i>
+                            <h2 class="main">Developement</h2>
+                            <p class="main">
+                                Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Ratione nobis, architecto ad <br> dolore quod, facere totam quas recusandae <br> blanditiis.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-30">
+                        <div class="content-col">
+                            <i class="fa-solid fa-bullhorn" style="color: #0084fd;"></i>
+                            <h2 class="main">Branding</h2>
+                            <p class="main">
+                                Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Ratione nobis, architecto ad <br> dolore quod, facere totam quas recusandae <br> blanditiis.
+                            </p>
+                        </div>
+                    </div>
+                    </div>
                 </div>
             </div>
         </section>
