[FEAT][STYLE]Add content to the section 2

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-30">
+                    <div class="col-30 margin">
                         <div class="content-col">
                             <i class="fa-solid fa-bullhorn" style="color: #0084fd;"></i>
                             <h2 class="main">Branding</h2>
@@ -105,8 +105,27 @@
         <section id="planning">
             <div class="container">
                 <div class="row">
-                    <div class="col-50"></div>
-                    <div class="col-50"></div>
+                    <div class="col-50">
+                        <div class="content">
+                            <img src="./img/planning1.png" alt="planning">
+                            <h2 id="planning-1">Strategic Planning</h2>
+                            <p class="planning1">Egestas dui id omare arcu odio. In tellus <br>
+                                integer feugiat scelerisque varius morbi enim <br>
+                                nunc. Habitasse platea dictumst quisque <br>
+                                sagittis. Interdum velit euismod in <br>
+                                pellentesque massa placerat duis. Quis <br>
+                                viverra nibh cras pulvinar mattis.</p>
+                        </div>
+                    </div>
+                    <div class="col-50">
+                        <div class="content-planning">
+                            <img src="./img/planning2.png" alt="planning">
+                            <h2 id="planning-2">App Developement</h2>
+                            <p class="planning2">Develop an on-demand app for your <br> delivery business to reach your <br> targeted customers without any <br> interruption.
+                            </p>
+                            <i class="fa-solid fa-arrow-down-long" style="color: #212121;"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
