[FIX]Add correction to the header and section 1-2

--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Responsive Layout</title>
 </head>
@@ -16,18 +13,18 @@
         <div class="container">
             <div class="header-flex">
                 <div class="left-logo">
-                    <div class="content-header">
+                    <div>
                         <img src="./img/logo.png" alt="Logo">
                     </div>
                 </div>
                 <div class="right-menu">
                     <div class="hamburger">
-                        <div class="content-header">
-                            <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
+                        <div>
+                            <i class="fa-solid fa-bars"></i>
                         </div>
                     </div>
                     <div class="extended-menu">
-                        <div class="content-header">
+                        <div>
                             <a href="#">Planning</a>
                             <a href="#">Testimonials</a>
                             <a href="#">Features</a>
@@ -45,71 +42,74 @@
                 <div class="row">
                     <div class="col-double">
                         <div class="content">
-                            <div class="content-flex">
+                            <div class="content flex">
                                 <div class="left-content">
-                                    <h2>Get a demo application</h2>
-                                    <p>
-                                        Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Ratione <br> nobis, architecto ad dolore quod, <br> facere totam quas recusandae <br> blanditiis.
-                                    </p>
-                                    <div id="button">
-                                        <i class="fa-brands fa-apple" style="color: #ffffff;"></i>
-                                        <span>App Store</span> 
+                                    <div>
+                                        <h2>Get a demo application</h2>
+                                        <p>
+                                            Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Ratione <br> nobis, architecto ad dolore quod, <br> facere totam quas recusandae <br> blanditiis.
+                                        </p>
+                                        <div id="button">
+                                            <i class="fa-brands fa-apple"></i>
+                                            <span>App Store</span> 
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="right-content">
-                                    <img id="img" src="./img/phone.png" alt="">
+                                    <div>
+                                        <img src="./img/phone.png" alt="">
+                                    </div>
                                 </div>
                             </div>
-                        </div>    
+                        </div>
                     </div>
-                    <div class="col-30">
-                        <div class="content-col">
-                            <i class="fa-solid fa-file-code" style="color: #0084fd;"></i>
-                            <h2 class="main">Clean Code</h2>
-                            <p class="main">
-                                Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Ratione nobis, architecto ad <br> dolore quod, facere totam quas recusandae <br> blanditiis.
+                    <div class="col-30 content">
+                        <div>
+                            <i class="fa-solid fa-file-code"></i>
+                            <h2>Clean Code</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Ratione <br> nobis, architecto ad dolore quod, <br> facere totam quas recusandae <br> blanditiis.
                             </p>
                         </div>
                     </div>
-                    <div class="col-30">
-                        <div class="content-col">
-                            <i class="fa-solid fa-compass-drafting" style="color: #0084fd;"></i>
+                    <div class="col-30 content">
+                        <div>
+                            <i class="fa-solid fa-compass-drafting"></i>
                             <h2 class="main">Web Design</h2>
-                            <p class="main">
-                                Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Ratione nobis, architecto ad <br> dolore quod, facere totam quas recusandae <br> blanditiis.
+                            <p>
+                                Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Ratione <br> nobis, architecto ad dolore quod, <br> facere totam quas recusandae <br> blanditiis.
                             </p>
                         </div>
                     </div>
-                    <div class="col-30">
-                        <div class="content-col">
-                            <i class="fa-solid fa-laptop-code" style="color: #0084fd;"></i>
+                    <div class="col-30 content">
+                        <div>
+                            <i class="fa-solid fa-laptop-code"></i>
                             <h2 class="main">Developement</h2>
-                            <p class="main">
-                                Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Ratione nobis, architecto ad <br> dolore quod, facere totam quas recusandae <br> blanditiis.
+                            <p>
+                                Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Ratione <br> nobis, architecto ad dolore quod, <br> facere totam quas recusandae <br> blanditiis.
                             </p>
                         </div>
                     </div>
-                    <div class="col-30 margin">
-                        <div class="content-col">
-                            <i class="fa-solid fa-bullhorn" style="color: #0084fd;"></i>
+                    <div class="col-30 content">
+                        <div>
+                            <i class="fa-solid fa-bullhorn"></i>
                             <h2 class="main">Branding</h2>
-                            <p class="main">
-                                Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Ratione nobis, architecto ad <br> dolore quod, facere totam quas recusandae <br> blanditiis.
+                            <p>
+                                Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Ratione <br> nobis, architecto ad dolore quod, <br> facere totam quas recusandae <br> blanditiis.
                             </p>
                         </div>
-                    </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section id="planning">
+        <section class="background">
             <div class="container">
                 <div class="row">
                     <div class="col-50">
-                        <div class="content">
+                        <div>
                             <img src="./img/planning1.png" alt="planning">
-                            <h2 id="planning-1">Strategic Planning</h2>
-                            <p class="planning1">Egestas dui id omare arcu odio. In tellus <br>
+                            <h2>Strategic Planning</h2>
+                            <p>Egestas dui id omare arcu odio. In tellus <br>
                                 integer feugiat scelerisque varius morbi enim <br>
                                 nunc. Habitasse platea dictumst quisque <br>
                                 sagittis. Interdum velit euismod in <br>
@@ -118,12 +118,14 @@
                         </div>
                     </div>
                     <div class="col-50">
-                        <div class="content-planning">
-                            <img src="./img/planning2.png" alt="planning">
-                            <h2 id="planning-2">App Developement</h2>
-                            <p class="planning2">Develop an on-demand app for your <br> delivery business to reach your <br> targeted customers without any <br> interruption.
+                        <div id="white">
+                            <img id="planning" src="./img/planning2.png" alt="planning">
+                            <h2>App Developement</h2>
+                            <p>Develop an on-demand app for your <br> delivery business to reach your <br> targeted customers without any <br> interruption.
                             </p>
-                            <i class="fa-solid fa-arrow-down-long" style="color: #212121;"></i>
+                            <div id="circle">
+                                <i class="fa-solid fa-arrow-down-long"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
