--- a/index.html
+++ b/index.html
@@ -134,19 +134,60 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="col-100"></div>
-                    <div class="col-100"></div>
-                    <div class="col-100"></div>
-                    <div class="col-100"></div>
+                    <div class="col-100">
+                        <div>
+                            <h4>TESTIMONIALS</h4>
+                            <h2>We are commited <br> expert patners</h2>
+                            <p>We place huge value on strong <br>relationships and have seen the b <br> benefit they bring to our business. <br>
+                                Customer feedback is vital in <br> helping us to get it right.</p>
+                        </div>
+                    </div>
+                    <div class="col-100 background">
+                        <div>
+                            <img src="./img/testimonial1.jpg" alt="">
+                            <p> 
+                                Vitae suscipit tellus mauris a <br>
+                                diam maecenas sed enim ut. <br>
+                                Mauris augue neque gravida in <br> fermentum. Praesent semper <br>
+                                feugiat nibh pulvinar proin. 
+                            </p>
+                            <h4>NAT REYNOLDS</h4>
+                        </div>
+                    </div>
+                    <div class="col-100 background">
+                        <div>
+                            <img src="./img/testimonial2.jpg" alt="">
+                            <p> 
+                                Pharetra vel turpis nunc eget <br>
+                                lorem. Quisque id diam vel <br> quam elementum pulvinar <br>
+                                etiam. Urna porttitor rhoncus <br> dolor purus non enim praesent <br> elementum.  
+                            </p>
+                            <h4>CELIA ALMEDA</h4>
+                        </div>
+                    </div>
+                    <div class="col-100 background">
+                        <div>
+                            <img src="./img/testimonial3.jpg" alt="">
+                            <p> 
+                                Mauris augue neque gravida <br> in fermentum. Present semper <br>
+                                feugiat nibh sed pulvinar proin. <br>
+                                Nibh nist condimentum id <br> venenatis a condimentum. 
+                            </p>
+                            <h4>BOB ROBERTS</h4>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
         <section id="benefits">
             <div class="container">
                 <div class="row">
-                    <div class="col-30">
-                        <div class="content"></div>
+                    <div class="col-10">
+                        <div>
+                            <h2>Benefits of working <br> with us</h2>
+                        </div>
                     </div>
+                    <div class="col-30"></div>
                     <div class="col-30"></div>
                     <div class="col-30"></div>
                     <div class="col-30"></div>
@@ -158,8 +199,51 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="col-75"></div>
-                    <div class="col-25"></div>
+                    <div class="col-75">
+                        <div>
+                            <h2>About Us</h2>
+                            <p>
+                                Sample text. Click to Egestas egestas <br>
+                                fringilla phasellus faucibus scelerisque <br>
+                                eleifend donec pretium vulputate. <br>
+                                Pharetra magna ac placerat vestibulum. <br>
+                                Quam lacus suspendisse faucibus <br>
+                                interdum posuere lorem. Egestas tellus <br>
+                                rutrum tellus pellentesque eu tincidunt. <br>
+                                Neque vitae temps quam pellentesque <br>
+                                nec. Vel elit scelerisque mauris <br>
+                                pellentesque pulvinar pellentesque <br>
+                                habitant morbi. Interdum velit euismod <br>
+                                in pellentesque massa placerat duis.
+                            </p>
+                            <p>
+                                Quis viverra nibh cras pulvinar mattis. <br>
+                                Ornare arcu dui vivamus arcu felis <br>
+                                bibendum ut tristique. Pellentesque eu <br>
+                                tincidunt tortor aliquam nulla facilisi <br>
+                                cras fermentum odio. Dignissim diam <br>
+                                quis enim lobortis scelerisque. Tellus <br>
+                                molestie nunc non blandit massa enim. <br>
+                                the text box. Click again or double click <br> 
+                                to start editing the text.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-25">
+                        <div>
+                            <img src="./img/about.jpg" alt="">
+                            <h2>
+                                I help companies <br>
+                                tincidunt tortor aliquam <br>
+                                nulla facilisi cras <br>
+                                fermentum odio. 
+                            </h2>
+                            <div id="small">
+                                <i class="fa-brands fa-linkedin"></i>
+                                <span>Find me on linkedin</span> 
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
