[FEAT STYLE]Add content to the section-4

--- a/index.html
+++ b/index.html
@@ -187,12 +187,102 @@
                             <h2>Benefits of working <br> with us</h2>
                         </div>
                     </div>
-                    <div class="col-30"></div>
-                    <div class="col-30"></div>
-                    <div class="col-30"></div>
-                    <div class="col-30"></div>
-                    <div class="col-30"></div>
-                    <div class="col-30"></div>
+                    <div class="col-30">
+                        <div class="margin">
+                            <div>01</div>
+                            <h3>High Quality</h3>
+                            <p>
+                                Vitae suscipit tellus mitris a diam <br>
+                                maecenas sed enim ut. Mauris <br>
+                                augue neque gravida in fermentum. <br>
+                                Praesent semper feugiat nibh sed <br>
+                                pulvinar proin id venenatis.
+                            </p>
+                            <div id="more">
+                                <div>more</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-30">
+                        <div class="margin">
+                            <div>02</div>
+                            <h3>Creative Team</h3>
+                            <p>
+                                Vitae suscipit tellus mitris a diam <br>
+                                maecenas sed enim ut. Mauris <br>
+                                augue neque gravida in fermentum. <br>
+                                Praesent semper feugiat nibh sed <br>
+                                pulvinar proin id venenatis.
+                            </p>
+                            <div id="more">
+                                <div>more</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-30">
+                        <div class="margin">
+                            <div>03</div>
+                            <h3>Amazing Results</h3>
+                            <p>
+                                Vitae suscipit tellus mitris a diam <br>
+                                maecenas sed enim ut. Mauris <br>
+                                augue neque gravida in fermentum. <br>
+                                Praesent semper feugiat nibh sed <br>
+                                pulvinar proin id venenatis.
+                            </p>
+                            <div id="more">
+                                <div>more</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-30">
+                        <div class="margin">
+                            <div>04</div>
+                            <h3>Best Pricing</h3>
+                            <p>
+                                Vitae suscipit tellus mitris a diam <br>
+                                maecenas sed enim ut. Mauris <br>
+                                augue neque gravida in fermentum. <br>
+                                Praesent semper feugiat nibh sed <br>
+                                pulvinar proin id venenatis.
+                            </p>
+                            <div id="more">
+                                <div>more</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-30">
+                        <div class="margin">
+                            <div>05</div>
+                            <h3>Innovations</h3>
+                            <p>
+                                Vitae suscipit tellus mitris a diam <br>
+                                maecenas sed enim ut. Mauris <br>
+                                augue neque gravida in fermentum. <br>
+                                Praesent semper feugiat nibh sed <br>
+                                pulvinar proin id venenatis.
+                            </p>
+                            <div id="more">
+                                <div>more</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-30">
+                        <div class="margin">
+                            <div>06</div>
+                            <h3>24/7 Support</h3>
+                            <p>
+                                Vitae suscipit tellus mitris a diam <br>
+                                maecenas sed enim ut. Mauris <br>
+                                augue neque gravida in fermentum. <br>
+                                Praesent semper feugiat nibh sed <br>
+                                pulvinar proin id venenatis.
+                            </p>
+                            <div id="more">
+                                <div>more</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
