--- a/index.html
+++ b/index.html
@@ -340,7 +340,23 @@
         <section id="started">
             <div class="container">
                 <div class="row">
-                    <div class="col-60"></div>
+                    <div class="col-60">
+                        <div>
+                            <h4>GET STARTED</h4>
+                            <h3>Simple, Transparent <br> Pricing</h3>
+                            <h2>It's Free!</h2>
+                            <p>We're still in beta and we will be for awhile. <br>
+                                As we add more functionality, we'll Look into <br>
+                                other plans with more controls.
+                            </p>
+                            <div id="big">
+                                <div>Get Started</div> 
+                            </div>
+                            <div id="text">
+                                <div>Copyright 2021 Boolean • Classe XX • <span>Privacy <br> policy</span></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
