--- a/index.html
+++ b/index.html
@@ -365,7 +365,16 @@
         <section id="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-55"></div>
+                    <div class="col-55">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing <br>
+                            elit. Commodi maiores minima vita vero nulla <br>
+                            pariatur impedit!
+                        </p>
+                        <div id="copyright">
+                            <div>Lorem ipsum</div> scelerisque mauris pellentesque
+                        </div>
+                        <span>Boolean careers</span>
+                    </div>
                 </div>
             </div>
         </section>
